# demoland-web

./: .dockerignore  .eslintrc.cjs  .gitignore  .gitmodules  CUSTOM_AREA.md  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  default.conf  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.eslint.json  tsconfig.json  vite.config.ts
assets/: index-00e9ac2f.css  index-0e6f8ba3.css  index-100e0784.css  index-1afc91c2.css  index-1b32fe13.css  index-21b65776.css  index-231e6c91.css  index-2c5d32ae.css  index-2d464805.css  index-32d0ca23.css  index-3cacfb83.css  index-48712cd9.css  index-4e861abd.css  index-50f4fde1.css  index-516f66b0.css  index-51e90add.css  index-53000a47.css  index-5ad962f1.css  index-5e299203.css  index-66a61a4a.css  index-6a7a3036.css  index-6c3a688b.css  index-760c6412.js  index-82fef2b8.css  index-87201670.css  index-956ffad5.css  index-9ce54756.css  index-9fd2ce6f.css  index-a9c7926c.css  index-b278e3c2.css  index-b5a2457a.css  index-c444bdd4.css  index-c583f0a8.css  index-c6764dcd.css  index-d78024c2.css  index-e5e85b49.css  index-eaf21af7.css  index-efdd352d.css  index-f0913dca.css  index-f324096e.css  (+3 more)
demoland_pyodide/: index.js  package.json  pnpm-lock.yaml
dev/: index.html
isle_of_wight/: demoland_engine-0.1.dev1+g3cfb7e1-py3-none-any.whl  demoland_engine-0.1.dev1+g8333879-py3-none-any.whl  index.html
llm_server/: README.md  main.py  pyproject.toml
llm_server/data/: IMD.geojson  counties_newcastle.geojson  pen_portraits.json
llm_server/demoland_agent/: __init__.py  tools.py  utils.py
newcastle/: index.html
(+345 files in other folders)
